--- a/app/views/stories/_start_story.html.erb
+++ b/app/views/stories/_start_story.html.erb
@@ -12,6 +12,7 @@
 			
 		</li>
 		<li>
+			<span class="error-message"></span>
 			<span class="counter-text">55 words left out of 55</span>
 			<%= f.button 'Feed It', :class => 'btn btn-create-story', disabled: true, disable_with: 'Creating story...'%>
 		</li>
