--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -80,6 +80,15 @@
 
 
 </header>
+<% if false%>
+<div class="second-header navbar">
+  <ul class="nav">
+    <li><%=link_to 'My Feed', root_url %></li>
+    <li><%=link_to 'Everything', root_url %></li>
+    <%= render 'layouts/start_story_link' %>
+  </ul>
+</div>
+<%end%>
 
 <!--end: Header-->
 <%= yield :home%>
