--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@
       <%= render 'layouts/unregisterd_modals' %>
       
     <%end%>
+    <%= render 'layouts/scroll_to_top' %>
     <%= yield :footer %>
   </div>
     <%= debug(params) if Rails.env.development? %>
