--- a/app/views/layouts/static_pages.html.erb
+++ b/app/views/layouts/static_pages.html.erb
@@ -53,6 +53,7 @@
       <%= render 'layouts/unregisterd_modals' %>
       
     <%end%>
+    <%= render 'layouts/scroll_to_top' %>
     <%=render 'layouts/footer' %>
   </div>
     <%= debug(params) if Rails.env.development? %>
