--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -6,7 +6,7 @@
 <p>
 If you have questions or suggestions, send us a quick note by replying to this email.</p>
 <p> 
-We look forward to reading your stories and hearing your feedback
+We look forward to reading your stories and hearing your feedback.
 </p>
 
 <p>Feed the Fiction!</p>
