--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,6 +8,7 @@ $title-font : 'Lobster';
 
 body {
 	font-family: "helvetica neue",arial,sans-serif;
+	background: $background-url;
 
 }
 
@@ -241,8 +242,11 @@ a.link {
 
 header {
 	background-color: $background-header;
-	border-bottom: 0;
+	
 	height: 45px;
+
+	
+
 	.navbar, 
 	.navbar-inner, 
 	.nav,
@@ -250,10 +254,10 @@ header {
 		float: right;
 		/*background: $background-color !important;*/
 		filter: none !important;
-		border: none;
+		/*border: none;
 		-webkit-box-shadow: none;
 	       -moz-box-shadow: none;
-	            box-shadow: none;
+	            box-shadow: none;*/
 		padding: 0px;
 		margin: 0;
 		/*height: 30px;
@@ -294,7 +298,43 @@ header {
 
 }
 
+
+.second-header {
+	position: fixed;
+	top: 0;
+	background: $background-header;
+	width: 100%;
+	z-index: 999;
+	display: none;
+	height: 33px;
+	border-bottom: 1px solid $background-header;
+
+	-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.15), 0px 2px 1px rgba(0,0,0,.10), 0px 3px 1px rgba(0,0,0,.05);
+	   -moz-box-shadow: 0px 1px 1px rgba(0,0,0,.15), 0px 2px 1px rgba(0,0,0,.10), 0px 3px 1px rgba(0,0,0,.05);
+    		box-shadow: 0px 1px 1px rgba(0,0,0,.15), 0px 2px 1px rgba(0,0,0,.10), 0px 3px 1px rgba(0,0,0,.05);
+	.navbar{
+		text-align: center;
+		margin: 0 auto;
+		.nav {
+			float: none;
+			display: inline-block;
+			li > a {
+				padding:5px 15px 5px;
+				color: #fff;
+			}
+
+
+		}
+	}
+	.navbar , .nav ,.navbar-inner
+	{
+		height: 32px;
+		min-height: 32px;
+	}
+}
+
 footer {
+
 	margin-top: 20px;
 	background-color: #323232;
 	padding: 10px;
@@ -1001,6 +1041,8 @@ footer {
 
 .error-message {
 	color: red;
+	float: left;
+	padding-left: 47px;
 }
 
 
@@ -1481,7 +1523,17 @@ ul.commentlist {
 	}
 }
 
-/* Start a stry wizard */
+/* First time modal disclaimer */
+#firstTimeDisclaimer {
+	font-family: $story-font;
+	width: 600px;
+	.disclaimer-body {
+		padding: 10px;
+		font-size: 15px;
+	}
+}
+
+/* Start a story wizard */
 #StartStoryModal {
 	h2,h3 {
 		/*text-align: center;*/
@@ -1501,7 +1553,9 @@ ul.commentlist {
 			opacity: 0.9;
 	}
 
-
+	.error-message {
+		padding: 0;
+	}
 	
 	
 	li {
@@ -1714,7 +1768,7 @@ ul.commentlist {
 
 	#upload-component {
 		#file {
-			display: none;
+			visibility: hidden;
 		}
 	}
 }
