--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -80,13 +80,17 @@
 
 
 </header>
-<% if false%>
-<div class="second-header navbar">
-  <ul class="nav">
-    <li><%=link_to 'My Feed', root_url %></li>
-    <li><%=link_to 'Everything', root_url %></li>
-    <%= render 'layouts/start_story_link' %>
-  </ul>
+<% if current_user%>
+<div class="second-header">
+  <div class="navbar navbar-inverse">
+    <div class="navbar-inner">
+      <ul class="nav">
+        <li><%=link_to 'My Feed', root_url %></li>
+        <li><%=link_to 'Everything', root_url %></li>
+        <%= render 'layouts/start_story_link' %>
+      </ul>
+    </div>
+  </div>
 </div>
 <%end%>
 
