--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
     <%= render 'layouts/scroll_to_top' %>
     <%= yield :footer %>
   </div>
-    <%= debug(params) if Rails.env.development? %>
+    <%#= debug(params) if Rails.env.development? %>
     <%= render 'layouts/analytics' %>
 
   </body>
