--- a/app/views/feeds/_alpha_disclaimer.html.erb
+++ b/app/views/feeds/_alpha_disclaimer.html.erb
@@ -2,7 +2,7 @@
 					<div class="modal hide fade in" id="firstTimeDisclaimer">
               <div><a class="close-modal" data-dismiss="modal"></a></div>
               <div class="disclaimer-body">
-              	<h2>Hi Yossi Shalem and thank you for trying FeedFiction.</h2>
+              	<h2>Hi <%= current_user.name%> and thank you for trying FeedFiction.</h2>
               	<p>Please note that this is a closed alpha version.</p>
               	<p>It may contain known bugs, and almost certainly contains unknown bugs. Features intended for the final release may be incomplete or missing.</p>
               	<p>If you find bugs or have suggestions please <a href='mailto:contactus@feedfiction.com'>contact us</a>.</p>
