--- a/app/views/layouts/_logo_nav.html.erb
+++ b/app/views/layouts/_logo_nav.html.erb
@@ -1,5 +1,5 @@
 <!--start: Logo -->
-<div class="span3"><a href="<%= root_url%>" class="logo-image"></a></div>
+<div class="span3"><a href="<%= general_feed_url%>" class="logo-image"></a></div>
 
 
 
