--- a/app/views/layouts/_feed_nav.html.erb
+++ b/app/views/layouts/_feed_nav.html.erb
@@ -3,8 +3,8 @@
 	  <div class="navbar-inner">
 	    
 	    <ul class="nav">
-	      <li><%=link_to 'My Feed', root_url if current_user%></li>
-	      <li><%=link_to 'Everything', general_feed_url%></li>
+	      <li <%= @my_feed_active%>><%=link_to 'My Feed', root_url if current_user%></li>
+	      <li <%= @everything_active%>><%=link_to 'Everything', general_feed_url%></li>
 	      <!-- <li><%#=link_to 'Popular', '#'%></li> -->
 
 	    </ul>
