--- a/app/views/feeds/_alpha_disclaimer.html.erb
+++ b/app/views/feeds/_alpha_disclaimer.html.erb
@@ -15,7 +15,7 @@
           	if ($.cookie("first_disclaimer")==null) {
           		$('#firstTimeDisclaimer').modal('show')	;
 
-          		$.cookie('first_disclaimer', '2', { expires: 2 })
+          		$.cookie('first_disclaimer', '2')
           	}
           })();
           </script>
