--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -85,7 +85,7 @@
   <div class="navbar navbar-inverse">
     <div class="navbar-inner">
       <ul class="nav">
-        <li <%= @everything_active%>><%=link_to 'Everything', root_url %></li>
+        <li <%= @everything_active%>><%=link_to 'Everything', general_feed_url %></li>
         <li <%= @my_feed_active%>><%=link_to 'My Feed', root_url %></li>
         <%= render 'layouts/start_story_link' %>
       </ul>
