--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -543,103 +543,7 @@ footer {
 
 
 /* Home page */
-.hp-header {
-	position: relative;
-	.slider-wrapper {
-		/*background: url('hpcollage_blur.jpg') repeat-x;*/
-		background: url('Collage.jpg') repeat-x;
-		height: 500px;
-		
 
-		div {
-			background-color: #000;
-			width:100%; height: 100%;
-			opacity: 0.7;
-		}
-
-	}
-	.hp-blocks {
-		position: absolute;
-		top: 50px;
-		width: 100%;
-		/*.container {
-			background-color: $background-color;
-			padding:10px;
-		}*/
-	}
-	.anounce {
-			float: left;
-			color: #fff;
-			font-size: 30px;
-			width: 590px;
-			line-height: 40px;
-			text-align: center;
-			p{
-				text-align: center;
-			}
-			.last-word {
-				/*color: #2954C5;*/
-				
-			}
-
-			.sign-in{
-				
-				position: relative;
-				top: 90px;
-				
-			}
-
-			/*.sign-in {
-				background: url('hp_facbook_coonect.png') no-repeat;
-				height: 61px; width: 344px;
-				display: inline-block;
-				color: #EEE;
-				font-size: 23px;
-				/*padding-left: 69px;*/
-				/*padding-left: 30px;
-				margin-left: 30px;
-				line-height: 62px;
-				position: relative;
-				top: 90px;
-				cursor: pointer;
-			}*/
-			
-		}
-	.story-panel {
-		float: right;
-		width: 570px;
-	}
-
-		.hp-labels {
-			background: url('hp_labels_arrows_white.png') no-repeat;
-			background-repeat: no-repeat;
-			display: block;
-			height: 117px; width: 150px; 
-		}
-		.hp-lbl-container, .photo-tile , .lbl-start-writing{
-			float: left;
-		}
-
-		.lbl-start-writing {
-			height: 250px;
-			background-position: 22px 150px;
-		}
-		.photo-tile {
-			background: url('hp_story_cover3.png') no-repeat;
-			display: inline-block;
-			width: 263px;
-			height: 417px;
-		}
-		.lbl-upload-photo {
-			background-position: -264px 27px;
-			height: 234px;
-		}
-		.lbl-continue {
-			background-position: -112px 14px;
-		}
- 
-
-}
 
 /* Photo Stream
 =================================================================== */
@@ -1886,3 +1790,249 @@ ul.commentlist {
 		line-height: 55px;
 	}
 }
+
+/* Media Queries
+====================================================================== */
+
+.hp-header {
+	position: relative;
+	.slider-wrapper {
+		/*background: url('hpcollage_blur.jpg') repeat-x;*/
+		background: url('Collage.jpg') repeat-x;
+		height: 500px;
+		width: 100%;
+		-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+		
+
+		div {
+			background-color: #000;
+			width:100%; height: 100%;
+			opacity: 0.7;
+		}
+
+	}
+	.hp-blocks {
+		position: absolute;
+		top: 50px;
+		width: 100%;
+		/*.container {
+			background-color: $background-color;
+			padding:10px;
+		}*/
+	}
+	.anounce {
+			float: left;
+			color: #fff;
+			font-size: 30px;
+			width: 590px;
+			line-height: 40px;
+			text-align: center;
+			p{
+				text-align: center;
+			}
+			.last-word {
+				/*color: #2954C5;*/
+				
+			}
+
+			.sign-in{
+				
+				position: relative;
+				top: 90px;
+				
+			}
+
+			/*.sign-in {
+				background: url('hp_facbook_coonect.png') no-repeat;
+				height: 61px; width: 344px;
+				display: inline-block;
+				color: #EEE;
+				font-size: 23px;
+				/*padding-left: 69px;*/
+				/*padding-left: 30px;
+				margin-left: 30px;
+				line-height: 62px;
+				position: relative;
+				top: 90px;
+				cursor: pointer;
+			}*/
+			
+		}
+	.story-panel {
+		float: right;
+		width: 570px;
+	}
+
+		.hp-labels {
+			background: url('hp_labels_arrows_white.png') no-repeat;
+			background-repeat: no-repeat;
+			display: block;
+			height: 117px; width: 150px; 
+		}
+		.hp-lbl-container, .photo-tile , .lbl-start-writing{
+			float: left;
+		}
+
+		.lbl-start-writing {
+			height: 250px;
+			background-position: 22px 150px;
+		}
+		.photo-tile {
+			background: url('hp_story_cover3.png') no-repeat;
+			display: inline-block;
+			width: 263px;
+			height: 417px;
+		}
+		.lbl-upload-photo {
+			background-position: -264px 27px;
+			height: 234px;
+		}
+		.lbl-continue {
+			background-position: -112px 14px;
+		}
+ 
+
+}
+
+/* Higher than 960 (desktop devices)
+====================================================================== */
+@media only screen and (min-width: 960px) {
+
+
+
+}
+
+/* Tablet Portrait (devices and browsers)
+====================================================================== */
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+
+	
+	.da-slide {
+		width: 750px;
+		height: 100%;
+		left: 50%;
+		margin-left: -375px;
+	}
+	
+	.da-slide h2{
+		font-size: 56px;
+		width: 50%;
+	}	
+}
+
+/* All Mobile Sizes (devices and browser)
+====================================================================== */
+@media only screen and (max-width: 767px) {
+
+	
+	.da-slide {
+		width: 420px;
+		height: 100%;
+		left: 50%;
+		margin-left: -210px;
+	}
+	
+	.da-slide h2{
+		font-size: 36px;
+		width: 50%;
+	}
+
+}
+
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers)
+====================================================================== */
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+	
+	.da-slider{
+		width: 100% !important;
+		height: 300px;
+	}
+	
+	.da-slide {
+		width: 420px;
+		height: 100%;
+		left: 50%;
+		margin-left: -210px;
+	}
+	
+	.da-slide h2{
+		font-size: 36px;
+		width: 60%;
+		top: 20px;
+	}
+	
+	.da-slide p{
+		width: 80%;
+		top: 90px;
+		font-size: 16px;
+	}
+	.da-slide .da-img{
+		display: none;
+	}
+	.da-slide .da-link{
+		top: 200px; /*depends on p height*/
+	}
+
+	.da-dots{
+		width: 100%;
+		position: absolute;
+		text-align: center;
+		left: 0px;
+		bottom: 20px;
+		z-index: 2000;
+		-moz-user-select: none;
+		-webkit-user-select: none;
+	}
+
+
+}
+
+/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers)
+=================================================================== */
+@media only screen and (max-width: 479px) {
+
+	.da-slider{
+		width: 100% !important;
+		height: 300px;
+	}
+	
+	.da-slide {
+		width: 300px;
+		height: 100%;
+		left: 50%;
+		margin-left: -150px;
+	}
+	
+	.da-slide h2{
+		font-size: 36px;
+		width: 60%;
+		top: 20px;
+	}
+	
+	.da-slide p{
+		width: 80%;
+		top: 90px;
+		font-size: 16px;
+	}
+	.da-slide .da-img{
+		display: none;
+	}
+	.da-slide .da-link{
+		top: 200px; /*depends on p height*/
+	}
+
+	.da-dots{
+		width: 100%;
+		position: absolute;
+		text-align: center;
+		left: 0px;
+		bottom: 20px;
+		z-index: 2000;
+		-moz-user-select: none;
+		-webkit-user-select: none;
+	}
+	
+}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
