--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -245,7 +245,9 @@ header {
 	
 	height: 45px;
 
-	
+	.span15{ 
+		float: right;
+	}
 
 	.navbar, 
 	.navbar-inner, 
@@ -836,8 +838,8 @@ footer {
 	
 }
 
-#wrapper , .container {
-	
+.container {
+	width: 90%;
 }
 .hero-unit {
 	background-color: #fff;
@@ -1802,9 +1804,9 @@ ul.commentlist {
 		height: 500px;
 		width: 100%;
 		-webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover;
+		-moz-background-size: cover;
+		-o-background-size: cover;
+		background-size: cover;
 		
 
 		div {
@@ -1827,7 +1829,7 @@ background-size: cover;
 			float: left;
 			color: #fff;
 			font-size: 30px;
-			width: 590px;
+			max-width: 590px;
 			line-height: 40px;
 			text-align: center;
 			p{
@@ -1927,7 +1929,14 @@ background-size: cover;
 ====================================================================== */
 @media only screen and (max-width: 767px) {
 
-	
+	header {
+
+	}
+
+  .story-panel , .wrapper-logo-feed {
+  	display: none;
+  }
+
 	.da-slide {
 		width: 420px;
 		height: 100%;
@@ -1942,10 +1951,31 @@ background-size: cover;
 
 }
 
+
+
+
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers)
 ====================================================================== */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
+
+}
+
+
+@media only screen and (min-width: 331px) and (max-width: 479px) {
 	
+	.hp-header {
+		.slider-wrapper {
+			height: 350px;
+			
+		}
+
+		.anounce {
+			font-size: 25px;
+			line-height: 30px;
+			/*width: 220px;*/
+		}
+	}
+
 	.da-slider{
 		width: 100% !important;
 		height: 300px;
@@ -1992,47 +2022,20 @@ background-size: cover;
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers)
 =================================================================== */
-@media only screen and (max-width: 479px) {
+@media only screen and (max-width: 330px) {
 
-	.da-slider{
-		width: 100% !important;
+.hp-header {
+	.slider-wrapper {
 		height: 300px;
-	}
-	
-	.da-slide {
-		width: 300px;
-		height: 100%;
-		left: 50%;
-		margin-left: -150px;
-	}
-	
-	.da-slide h2{
-		font-size: 36px;
-		width: 60%;
-		top: 20px;
-	}
-	
-	.da-slide p{
-		width: 80%;
-		top: 90px;
-		font-size: 16px;
-	}
-	.da-slide .da-img{
-		display: none;
-	}
-	.da-slide .da-link{
-		top: 200px; /*depends on p height*/
+		
 	}
 
-	.da-dots{
-		width: 100%;
-		position: absolute;
-		text-align: center;
-		left: 0px;
-		bottom: 20px;
-		z-index: 2000;
-		-moz-user-select: none;
-		-webkit-user-select: none;
+	.anounce {
+		font-size: 17px;
+		line-height: 22px;
+		width: 220px;
 	}
+}
+	
 	
 }                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
