--- a/app/views/images/facebook.js.erb
+++ b/app/views/images/facebook.js.erb
@@ -2,7 +2,7 @@ var $newItems = "<%=j render 'images/photos' %>";
 $('#uploadProviders').hide();
 $('#StartStoryModal').animate({
              width: "790px", left: "41%"
-                }).promise().done(function(){
+                }).addClass('import-images').promise().done(function(){
 
 $('#imageTiles').append($newItems);
 renderIsotope('#StartStoryModal #portfolio-wrapper');
