--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -886,7 +886,7 @@ footer {
 }
 
 .container {
-	width: 90%;
+	/*width: 90%;*/
 }
 .hero-unit {
 	background-color: #fff;
@@ -1630,7 +1630,7 @@ ul.commentlist {
 		}
 
 		.modal-body {
-			max-height: none;
+			max-height: none !important;
 		}
 
 		/*ul.start-story-form {
@@ -1953,30 +1953,41 @@ ul.commentlist {
 
 }
 
+@media only screen and (min-width: 2371px) {
+	.container {
+		width: 2370px;
+	}
+}
+
+@media only screen and (min-width: 1976px) and (max-width: 2370px){
+	.container {
+		width: 1975px;
+	}
+}
+
+@media only screen and (min-width: 1599px) {
+	.container {
+		width: 1580px;
+	}
+}
+
 /* Higher than 960 (desktop devices)
 ====================================================================== */
-@media only screen and (min-width: 960px) {
-
-
-
+@media only screen and (min-width: 960px) and (max-width: 1599px){
+	.story-item .picture img {
+		height: auto !important;
+		
+	}
 }
 
 /* Tablet Portrait (devices and browsers)
 ====================================================================== */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
-
-	
-	.da-slide {
-		width: 750px;
-		height: 100%;
-		left: 50%;
-		margin-left: -375px;
+	.story-item .picture img {
+		height: auto !important;
+		
 	}
-	
-	.da-slide h2{
-		font-size: 56px;
-		width: 50%;
-	}	
+
 }
 
 /* All Mobile Sizes (devices and browser)
@@ -2030,14 +2041,21 @@ ul.commentlist {
 
 	}
 	#StartStoryModal ,.static-pages, .story-page .story ,
-	.story-header-hr-wrapper, #start-story-form-image, 
-	ul.start-story-form, ul.start-story-form textarea {
-		width: 100% !important;
+	.story-header-hr-wrapper /*#start-story-form-image, 
+	ul.start-story-form, ul.start-story-form textarea */{
+		width: auto;
+	}
+	#StartStoryModal.import-images ,.behaviour-story-form {
+		left: 5px !important;
+		top: 20px ;
+		
 	}
 	#StartStoryModal.import-images {
 		width: auto !important;
-		left: 0 !important;
-		top: 10px !important;
+	}
+	.story-item .picture img {
+		height: auto !important;
+		
 	}
 	#modal-register , .modal{
 		width: auto;
@@ -2074,6 +2092,9 @@ ul.commentlist {
 				}
 			}
 		}
+	}
+	.behaviour-story-form .modal-body {
+		max-height: auto !important;
 	}
 
 
@@ -2143,5 +2164,17 @@ ul.commentlist {
 	#copyright p {
 		width: auto;
 	}
+
+	#StartStoryModal.import-images, .behaviour-story-form ,ul.start-story-form{
+		/*left: 0 !important;*/
+		width: auto !important;
+	}
+
+	#start-story-form-image ,.modal-body {
+		max-width: 257px;
+	}
 	
+	ul.start-story-form textarea {
+		max-width: 245px;
+	}
 }                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
