--- a/app/views/layouts/_logo_nav.html.erb
+++ b/app/views/layouts/_logo_nav.html.erb
@@ -1,5 +1,5 @@
 <!--start: Logo -->
-<div class="span2"><a href="<%= general_feed_url%>" class="logo-image"></a></div>
+<a href="<%= general_feed_url%>" class="logo-image"></a>
 
 
 
