--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
      <%= render 'layouts/logo_nav' %>
         
       <!--start: Navigation -->
-      <div class="span15">
+      <div class="navbar-actions">
         <div class="navbar navbar-inverse">
             <div class="navbar-inner">
                   <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -70,10 +70,7 @@
         
     </div>
     <!--end: Row -->
-    <!-- <div class="row">
-      <%#= render 'layouts/second_navbar'%>
-    </div> -->
-    
+        
   </div>
   <!--end: Container-->     
     
