--- a/app/views/layouts/_start_story_link.html.erb
+++ b/app/views/layouts/_start_story_link.html.erb
@@ -1,3 +1,3 @@
 <% if current_user %>
-<li><a class="userFunction link" data-function="startStoryModal"><i class="mini-ico-pencil mini-white"></i> Start a story</a></li>
+<li><a class="userFunction link" data-function="startStoryModal" alt="Start a Story" title="Start a Story"><i class="mini-ico-pencil mini-white"></i> <span>Start a story</span></a></li>
 <%end%>
